--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -2,35 +2,38 @@
 
 {% block body %}
 
-<div>
-    <div class="vertical center">
-        <div style="width: fit-content;">
-            <h2 style="margin-top: 50px;">Please Login</h2>
-
-            <form method="POST" class="vertical">
-                {{ form.hidden_tag() }}
-
-                {% for field in form if field.widget.input_type != 'hidden' %}
-                {% for error in field.errors %}
-                    <span>{{ error }}</span>
-                {% endfor %}
-                {{ field(placeholder=field.label.text) }}
-                {% endfor %}
-
-                <button class="blue_but">Log in</button>
-            </form>
-        </div>
-        <hr>
-        <div class="vertical">
-            <h2>Don't have an account?</h2>
-            <div class="horizontal">
-                <form action="/signup">
-                    <button class="green_but">Sign up</button>
+<div class="vertical center max">
+    <div class="center_x game">
+        <div class="margin-50 white-box">
+            <div>
+                <h1 style="text-align: center;">Please Login</h1>           
+            </div>
+            <div class="center_x margin-vertical-50">
+                <form method="POST" class="vertical max">
+                    {{ form.hidden_tag() }}
+        
+                    {% for field in form if field.widget.input_type != 'hidden' %}
+                    {% for error in field.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                    {{ field(placeholder=field.label.text, class="big-input", style="color:rgb(57, 57, 57);") }}
+                    {% endfor %}
+                    <div class="center_x max">
+                        <button class="lightblue_but big-button" style="margin-top: 10px; width: 50%;">Login</button>
+                    </div>
                 </form>
-                <form method="POST">
-                    <input class="hidden" name="guest" value="true"/>
-                    <button class="blue_but">Continue as guest</button>
-                </form>
+            </div>
+            <div class="center_x vertical">
+                <h2>Don't have an account?</h2>
+                <div class="horizontal" style="display: flex; justify-content: space-evenly;">
+                    <form action="/signup">
+                        <button class="lightblue_but big-button">Sign up</button>
+                    </form>
+                    <form method="POST">
+                        <input class="hidden" name="guest" value="true"/>
+                        <button class="lightblue_but big-button">Continue as guest</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
