--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -2,10 +2,10 @@
 
 {% block body %}
 
-<div>
-    <div class="vertical center">
+<!-- <div class="vertical">
+    <div class="center_x margin-vertical-50">
         <div style="width: fit-content;">
-            <h2 style="margin-top: 50px;">Sign up</h2>
+            <h1 style="text-align: center;">Sign up</h1>
 
             <form method="POST" class="vertical">
                 {{ form.hidden_tag() }}
@@ -20,10 +20,12 @@
 
             </form>
         </div>
-        <hr>
+    </div>
+    <hr>
+    <div class="center_x margin-vertical-50">
         <div class="vertical">
             <h2>Already have an account?</h2>
-            <div class="horizontal">
+            <div class="horizontal" style="display: flex; justify-content: space-evenly;">
                 <form action="/login">
                     <button class="green_but">Log in</button>
                 </form>
@@ -31,6 +33,44 @@
                     <input class="hidden" name="guest" value="true"/>
                     <button class="blue_but">Continue as guest</button>
                 </form>
+            </div>
+        </div>
+    </div>
+</div> -->
+
+
+<div class="vertical center max">
+    <div class="center_x game">
+        <div class="margin-50 white-box">
+            <div>
+                <h1 style="text-align: center;">Sign up</h1>           
+            </div>
+            <div class="center_x margin-vertical-50">
+                <form method="POST" class="vertical max">
+                    {{ form.hidden_tag() }}
+        
+                    {% for field in form if field.widget.input_type != 'hidden' %}
+                    {% for error in field.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                    {{ field(placeholder=field.label.text, class="big-input", style="color:rgb(57, 57, 57);") }}
+                    {% endfor %}
+                    <div class="center_x max">
+                        <button class="lightblue_but big-button" style="margin-top: 10px; width: 50%;">Sign up</button>
+                    </div>
+                </form>
+            </div>
+            <div class="center_x vertical">
+                <h2>Already have an account?</h2>
+                <div class="horizontal" style="display: flex; justify-content: space-evenly;">
+                    <form action="/login">
+                        <button class="lightblue_but big-button">Login</button>
+                    </form>
+                    <form method="POST">
+                        <input class="hidden" name="guest" value="true"/>
+                        <button class="lightblue_but big-button">Continue as guest</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
