--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,9 @@
             <a id="nav_title" href="/" style="font-size: larger;"><span>Find the Word</span></a>
         </div>
         <div class="horizontal">
+            <form action="https://github.com/JustB544/Find-the-word" target="_blank">
+                <button class="gray_but no-flip">Source code</button>
+            </form>
             {% if g.user == None %}
             <form action="/signup">
                 <button class="green_but no-flip">Sign up</button>
